first content about new bon bon flavors

--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
         <img id="logo" src="img/logo.png" alt="" />
         <div class="line"></div>
       </header>
+      <section id="bon-bon" class="card">
+        <img src="img/bonbon.jpg" alt="" />
+        <div>
+          <h5>Tus favoritos, ahora con nuevos sabores</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam minima
+            inventore itaque. Nemo numquam ad perspiciatis laudantium
+            accusantium, possimus sint neque, quas ipsam repellat enim
+            voluptatem mollitia dolores officia quod libero.
+          </p>
+          <a href="" class="btn"> Conocelos </a>
+        </div>
+      </section>
     </div>
   </div>
 
