seccion cookie, new family product and family

--- a/index.html
+++ b/index.html
@@ -43,6 +43,70 @@
           <a href="" class="btn"> Conocelos </a>
         </div>
       </section>
+      <!-- seccion de las galletas Muuu -->
+      <section id="cookie" class="card">
+        <div>
+          <h5>Nueva presentacion, Muuucha diversion</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam minima
+            inventore itaque. Nemo numquam ad perspiciatis laudantium
+            accusantium, possimus sint neque, quas ipsam repellat enim
+            voluptatem mollitia dolores officia quod libero.
+          </p>
+          <a href="" class="btn"> Descubrela</a>
+        </div>
+        <img src="img/cookie.png" alt="Muu Cookies" />
+      </section>
+
+      <!-- seccion de nueva familia de productos 100% saludables -->
+      <section id="family">
+        <div id="titles">
+          <h1>Nueva familia de productos <span>100% Saludables</span></h1>
+        </div>
+        <div id="products">
+          <div class="card product">
+            <img src="img/gomas.png" alt="" />
+            <h5>
+              Gomas Deliciosas
+            </h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque
+              veniam laboriosam ullam consequatur blanditiis cupiditate.
+            </p>
+          </div>
+          <div class="card product">
+            <img src="img/sand.png" alt="" />
+            <h5>
+              Galletas Sandiwch
+            </h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque
+              veniam laboriosam ullam consequatur blanditiis cupiditate.
+            </p>
+          </div>
+          <div class="card product">
+            <img src="img/helado.png" alt="" />
+            <h5>
+              Helado Cremoso
+            </h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque
+              veniam laboriosam ullam consequatur blanditiis cupiditate.
+            </p>
+          </div>
+        </div>
+        <!-- fin de el div de productos -->
+        <!-- agregamos un boton para conocer la familia de productos -->
+        <a href="#" class="btn"> CONOCELOS TODOS</a>
+      </section>
+
+      <!-- al finalizar creamos un footer para finalizar el newsletter que lleve al cliente a la pagina oficial de colombina -->
+
+      <footer>
+        <img src="img/logo.png" alt="" />
+
+        <!-- <a href="https://www.colombina.com/">DESCUBRELO TODO</a> -->
+      </footer>
     </div>
   </div>
 
