--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div id="back-image">
       <!-- div usado para poner la imagen de fondo al inicio  -->
     </div>
+    <img id="logo" src="img/logo.png" alt="" />
     <!-- a continuacion se creare el div con el contenido verdadero del newsletter -->
     <div id="news-content">
       <!-- en primer lugar realizamos el encabezado el cual constara del titulo principal y el logo -->
@@ -27,7 +28,6 @@
         <div>
           <h1 id="main-title">DESCUBRE EL MUNDO COLOMBINA</h1>
         </div>
-        <img id="logo" src="img/logo.png" alt="" />
         <div class="line"></div>
       </header>
       <section id="bon-bon" class="card">
@@ -101,7 +101,7 @@
       </section>
 
       <!-- al finalizar creamos un footer para finalizar el newsletter que lleve al cliente a la pagina oficial de colombina -->
-
+      <div class="line2"></div>
       <footer>
         <img src="img/logo.png" alt="" />
 
