--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         </div>
         <div class="line"></div>
       </header>
+      <!-- creamos la seccion bon bon donde se hara la publicidad de estos, 
+      la seccion tendra la clase card para darle un efecto de relieve con sombras,
+    constara al igual que la secion de galletas que le sigue, con un titulo y parrafo de un lado y del otro la imagen,
+  ademas de un boton con etiqueta a -->
       <section id="bon-bon" class="card">
         <img src="img/bonbon.jpg" alt="" />
         <div>
@@ -59,6 +63,7 @@
       </section>
 
       <!-- seccion de nueva familia de productos 100% saludables -->
+      <!-- creamos el titulo y en cerramos la palabra que queremos hacerle mas enfasis en un span para dalre un mayor tamaño en este caso el span encierra la frase "100% saludables" a continuacion se muestran  -->
       <section id="family">
         <div id="titles">
           <h1>Nueva familia de productos <span>100% Saludables</span></h1>
@@ -101,11 +106,14 @@
       </section>
 
       <!-- al finalizar creamos un footer para finalizar el newsletter que lleve al cliente a la pagina oficial de colombina -->
+      <!-- una separacion antes -->
       <div class="line2"></div>
+      <!-- apertura del footer -->
       <footer>
-        <img src="img/logo.png" alt="" />
-
-        <!-- <a href="https://www.colombina.com/">DESCUBRELO TODO</a> -->
+        <!-- icono que lleva a la pagina y finaliza el newsletter -->
+        <a href="https://www.colombina.com/">
+          <img src="img/logo.png" alt="" />
+        </a>
       </footer>
     </div>
   </div>
